--- a/template.html
+++ b/template.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <p>Hello World!</p>
     </body>
